--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wagyu-model"
+name = "mwc-wagyu-model"
 version = "0.6.3"
 authors = [
     "Collin Chin",
@@ -8,8 +8,8 @@ authors = [
     "Howard Wu"
 ]
 description = "A generic model for cryptocurrency wallets"
-homepage = "https://github.com/AleoHQ/wagyu"
-repository = "https://github.com/AleoHQ/wagyu/tree/v0.6.3/model"
+homepage = "https://github.com/mwcproject/wagyu-model"
+repository = "https://github.com/mwcproject/wagyu-model"
 categories = ["command-line-utilities", "cryptocurrency"]
 keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "no_std"]
 readme = "README.md"
