--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ description = "A generic model for cryptocurrency wallets"
 homepage = "https://github.com/mwcproject/wagyu-model"
 repository = "https://github.com/mwcproject/wagyu-model"
 categories = ["command-line-utilities", "cryptocurrency"]
-keywords = ["bitcoin", "blockchain", "cryptocurrency", "ethereum", "no_std"]
+keywords = ["bitcoin", "blockchain", "mwc", "ethereum", "no_std"]
 readme = "README.md"
 license = "MIT/Apache-2.0"
 edition = "2018"
