remove crypto categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = [
 description = "A generic model for cryptocurrency wallets"
 homepage = "https://github.com/mwcproject/wagyu-model"
 repository = "https://github.com/mwcproject/wagyu-model"
-categories = ["command-line-utilities", "cryptocurrency"]
+categories = ["command-line-utilities"]
 keywords = ["bitcoin", "blockchain", "mwc", "ethereum", "no_std"]
 readme = "README.md"
 license = "MIT/Apache-2.0"
